# keystoke-visualizer

./: .gitignore  Cargo.toml  README.md  build.rs
src/: api.rs  app.rs  assets.rs  collector.rs  main.rs  model.rs  platform.rs  report.rs  storage.rs  web.rs
ui/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml
ui/src/: App.tsx  index.css
